--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,8 +32,9 @@ dependencies {
     compile 'com.android.support:support-vector-drawable:25.3.1'
     testCompile 'junit:junit:4.12'
 
-    // Perso
-    compile 'com.squareup.retrofit2:retrofit:2.3.0'
+    // Additions
+    compile 'com.squareup.retrofit2:retrofit:2.3.0' // For REST API communication
     compile 'com.squareup.retrofit2:converter-gson:2.3.0'
     compile 'com.squareup.retrofit2:converter-scalars:2.3.0'
+    compile 'com.squareup.picasso:picasso:2.5.2' // Pictures helper
 }
