--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,4 +39,9 @@ dependencies {
     compile 'com.squareup.retrofit2:converter-scalars:2.3.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
 
+    compile 'com.github.HaarigerHarald:android-youtubeExtractor:master-SNAPSHOT'
+}
+
+repositories {
+    maven { url "https://jitpack.io" }
 }
